<resources>
    <string name="app_name">Travelling Salesman Problem</string>

    <string name="action_settings">Settings</string>

    <string name="ask_permission_localization_label">To get the current location we need permission to access the location.</string>

    <string name="marker_here_you_are_label">Here you are</string>
    <string name="marker_counter_label">marker</string>

    <string name="dialog_ok">@android:string/ok</string>
    <string name="dialog_cancel">@android:string/cancel</string>

    <string name="menu_map">Show map</string>
    <string name="menu_clear">Clear map</string>
    <string name="menu_distances">Get distances</string>
    <string name="menu_calculate">Calculate route</string>
    <string name="menu_historically_routes">Historically routes</string>
    <string name="menu_about_author">About author</string>

    <string name="add_more_points">Add more points, at least 2!</string>
    <string name="distances_success">Success, distances taken</string>
    <string name="distances_error">Error:</string>
    <string name="distance_for_route_label">Distance:</string>
    <string name="show_on_map_label">Show on map</string>

</resources>
